--- a/h.html
+++ b/h.html
@@ -10,6 +10,7 @@
     <p>hello</p>
     <img src="" alt="">
     <h1>hello</h1>
+    <img src="C:\Users\saksh\OneDrive\Pictures\ram mandir.jpeg">
 
     
 </body>
